--- a/sass/_shame.scss
+++ b/sass/_shame.scss
@@ -103,7 +103,7 @@
 }
 
 .homepage-intro {
-	padding-top:$unit-small;
+	padding-top:$unit-medium;
 	padding-bottom: $unit-small;
 	@media (min-width: $bp-medium) {
 		padding-bottom:$unit-large;
